--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -1,17 +1,10 @@
 * {
-  background-color: bisque;
-  text-align: center;
+  background: linear-gradient(90deg, rgba(218, 120, 28, 1) 0%, rgba(223, 156, 19, 1) 35%, rgba(241, 227, 18, 1) 100%);
   list-style: none;
 }
 
-.title {
+.mainTitle {
   color: brown;
-  font-size: 100px;
-}
-
-.eachPokeContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  border: solid 1px sandybrown;
+  font-size: 80px;
+  text-align: center;
 }
